[package]
name = "Arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8", features = ['macros']}
crossbeam-queue = "0.3.12"
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
