[package]
name = "Arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = {version = "0.8.8", features = ['macros']}
crossbeam-queue = "0.3.12"
serde = {version = "1.0.228", features = ["derive"]}
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
base64 = "0.22.1"
bincode = "1.3.3"
solana-system-interface = { version = "3.0.0", features = ["bincode", "serde"] }
solana-pubkey = "3.0.0"
solana-transaction = { version = "3.0.0", features = ["bincode"] }

